--- a/src/style.css
+++ b/src/style.css
@@ -88,5 +88,13 @@ textarea {
   position: relative;
   flex: 1;
 }
+#select-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 1.5rem;
+  height: 5rem;
+}
 
 
